--- a/FakeAtlas/Localization/lang.ru-RU.xaml
+++ b/FakeAtlas/Localization/lang.ru-RU.xaml
@@ -3,7 +3,10 @@
                     xmlns:v="clr-namespace:System;assembly=mscorlib">
     <v:String x:Key="m_Title">FakeAtlas</v:String>
     <v:String x:Key="m_Login">Логин</v:String>
+    <v:String x:Key="m_Language">Язык</v:String>
     <v:String x:Key="m_Password">Пароль</v:String>
+    <v:String x:Key="m_PasswordNotEquals">Пароли не совпадают</v:String>
+    <v:String x:Key="m_RepeatPassword">Повторите пароль</v:String>
     <v:String x:Key="m_InputPassword">введите пароль</v:String>
     <v:String x:Key="m_InputLogin">введите логин</v:String>
     <v:String x:Key="m_KeepMe">Запомнить меня</v:String>
@@ -14,8 +17,7 @@
     <v:String x:Key="m_Help">Помощь</v:String>
     <v:String x:Key="m_History">Поездки</v:String>
     <v:String x:Key="m_SignOut">Выйти</v:String>
-    <v:String x:Key="m_Info">Информация
-        о пользователе</v:String>
+    <v:String x:Key="m_Info">Пользователь</v:String>
     <v:String x:Key="m_City">Город</v:String>
     <v:String x:Key="m_Name">ФИО</v:String>
     <v:String x:Key="m_Street">Улица</v:String>
@@ -32,4 +34,18 @@
     <v:String x:Key="m_CostInfo">Стоимость</v:String>
     <v:String x:Key="m_OrderTime">, время бронирования: </v:String>
     <v:String x:Key="m_OrderTimeInfo">Время бронирования</v:String>
+    <v:String x:Key="m_OrderUserHelp">• Чтобы узнать заполнить и узнать информацию о пользователе перейдите в раздел "Пользователь"</v:String>
+    <v:String x:Key="m_OrderSearchHelp">• Для ознакомления с доступными машрутрами перейдите в раздел "Найти маршрут"</v:String>
+    <v:String x:Key="m_UserOrdersHelp">• Просмотреть уже забронированные маршуты можно в разделе "Поездки"</v:String>
+    <v:String x:Key="m_Ok">Ок</v:String>
+    <v:String x:Key="m_Cancel">Отмена</v:String>
+    <v:String x:Key="m_AreUSure">Подтвердить действие?</v:String>
+    
+    <v:String x:Key="m_Shippers">Перевозчики</v:String>
+    <v:String x:Key="m_CompanyName">Компания</v:String>
+    <v:String x:Key="m_VehicleType">Марка авто</v:String>
+    <v:String x:Key="m_VehicleNum">Количество авто</v:String>
+
+    <v:String x:Key="m_AddCompany">Добавить компанию</v:String>
+    <v:String x:Key="m_AddRoute">Добавить маршрут</v:String>
 </ResourceDictionary>
