--- a/FakeAtlas/Views/MainWindow.xaml
+++ b/FakeAtlas/Views/MainWindow.xaml
@@ -8,10 +8,10 @@
         mc:Ignorable="d"
         WindowStyle="SingleBorderWindow"
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
-        xmlns:vmm ="clr-namespace:FakeAtlas.ViewModels.Management"
+        xmlns:vmm ="clr-namespace:FakeAtlas.ViewModels.Management" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         vmm:WindowCloser.EnableWindowClosingProperty="True" vmm:WindowMinimizer.EnableWindowMinimizingProperty="True"
         vmm:WindowMaximizer.EnableWindowMaximizingProperty="True" vmm:WindowRestorer.EnableWindowRestoringProperty="True"
-        Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Height="550" Width="850" WindowStartupLocation="CenterScreen" WindowState="{Binding CurrentState}">
     <WindowChrome.WindowChrome>
         <WindowChrome/>
     </WindowChrome.WindowChrome>
@@ -22,13 +22,13 @@
                     <ControlTemplate TargetType="Button">
                         <Grid x:Name="LayoutRoot" Background="Transparent" Width="44" Height="30">
                             <TextBlock x:Name="txt" Text="{TemplateBinding Content}" FontFamily="Segoe MDL2 Assets" FontSize="10" 
-                                   Foreground="#999999" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                   Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center"
                                    RenderOptions.ClearTypeHint="Auto" TextOptions.TextRenderingMode="Aliased"  TextOptions.TextFormattingMode="Display"/>
                         </Grid>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter TargetName="LayoutRoot" Property="Background" Value="#E5E5E5"/>
-                                <Setter TargetName="txt" Property="Foreground" Value="#000000"/>
+                                <Setter TargetName="txt" Property="Foreground" Value="Black"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -49,10 +49,9 @@
                     <StackPanel DockPanel.Dock="Left" Margin="6,6,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.RowSpan="5" Grid.ColumnSpan="2" Grid.Row="1" Height="350" Width="170">
                         <TextBlock Text="Fake Atlas" Foreground="#FF6397C5" FontFamily="Tahoma" 
                                    HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6" FontSize="28" Grid.Row="0" Grid.Column="0" Width="168" Grid.ColumnSpan="2" Height="48"/>
-                        <Button HorizontalAlignment="Left" Command="{Binding InfoCommand}"
-                                Style="{DynamicResource LiteralButton}" Height="50" Width="150" FontSize="20" WindowChrome.IsHitTestVisibleInChrome="True">
-                            <TextBlock HorizontalAlignment="Left" Text="{DynamicResource m_Info}" TextWrapping="Wrap"/>
-                            <Button.Triggers>
+                        <RadioButton x:Name="btnUser" IsChecked="True" HorizontalAlignment="Left" Background="BLack" Command="{Binding InfoCommand}"
+                                Style="{DynamicResource LiteralRadioButton}" Content="{DynamicResource m_Info}" Height="50" FontSize="20" WindowChrome.IsHitTestVisibleInChrome="True">
+                            <RadioButton.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
                                         <Storyboard>
@@ -63,60 +62,85 @@
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </EventTrigger>
-                            </Button.Triggers>
-                        </Button>
-                        <Button HorizontalAlignment="Left" Command="{Binding FindCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Find}" Height="50" FontSize="20">
-                            <Button.Triggers>
+                            </RadioButton.Triggers>
+                        </RadioButton>
+                        <RadioButton HorizontalAlignment="Left" Command="{Binding FindCommand}" Style="{DynamicResource LiteralRadioButton}" Content="{DynamicResource m_Find}" Height="50" FontSize="20">
+                            <RadioButton.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
                                         <Storyboard>
                                             <DoubleAnimation
                                                  Storyboard.TargetName="Pages"
                                                  Storyboard.TargetProperty="Opacity"
-                                                 From="0.5" To="1.0" Duration="0:0:1"/>
+                                                 From="0.5" To="1.0" Duration="0:0:0.3"/>
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </EventTrigger>
-                            </Button.Triggers>
-                        </Button>
-                        <Button HorizontalAlignment="Left" Command="{Binding OrdersCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_History}" Height="50" FontSize="20">
-                            <Button.Triggers>
+                            </RadioButton.Triggers>
+                        </RadioButton>
+                        <RadioButton HorizontalAlignment="Left" Command="{Binding OrdersCommand}" Style="{DynamicResource LiteralRadioButton}" Content="{DynamicResource m_History}" Height="50" FontSize="20">
+                            <RadioButton.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
                                         <Storyboard>
                                             <DoubleAnimation
                                                  Storyboard.TargetName="Pages"
                                                  Storyboard.TargetProperty="Opacity"
-                                                 From="0.3" To="1.0" Duration="0:0:1"/>
+                                                 From="0.3" To="1.0" Duration="0:0:0.3"/>
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </EventTrigger>
-                            </Button.Triggers>
-                        </Button>
-                        <Button HorizontalAlignment="Left"  Command="{Binding HelpCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Help}" Height="50" FontSize="20">
-                            <Button.Triggers>
+                            </RadioButton.Triggers>
+                        </RadioButton>
+                        <RadioButton HorizontalAlignment="Left"  Command="{Binding HelpCommand}" Style="{DynamicResource LiteralRadioButton}" Content="{DynamicResource m_Help}" Height="50" FontSize="20">
+                            <RadioButton.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
                                         <Storyboard>
                                             <DoubleAnimation
                                                  Storyboard.TargetName="Pages"
                                                  Storyboard.TargetProperty="Opacity"
-                                                 From="0.3" To="1.0" Duration="0:0:1"/>
+                                                 From="0.3" To="1.0" Duration="0:0:0.3"/>
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </EventTrigger>
-                            </Button.Triggers>
-                        </Button>
-                        <Button HorizontalAlignment="Left" Command="{Binding LogOutCommand}"  Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_SignOut}" Height="50" FontSize="20"/>
+                            </RadioButton.Triggers>
+                        </RadioButton>
+                        <RadioButton HorizontalAlignment="Left" Visibility="{Binding AdminVisibility}"  Command="{Binding ShipperCommand}" Style="{DynamicResource LiteralRadioButton}" Content="{DynamicResource m_Shippers}" Height="50" FontSize="20">
+                            <RadioButton.Triggers>
+                                <EventTrigger RoutedEvent="Button.Click">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation
+                                                 Storyboard.TargetName="Pages"
+                                                 Storyboard.TargetProperty="Opacity"
+                                                 From="0.3" To="1.0" Duration="0:0:0.3"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                            </RadioButton.Triggers>
+                        </RadioButton>
+                        <RadioButton HorizontalAlignment="Left" Command="{Binding LogOutCommand}"  Style="{DynamicResource LiteralRadioButton}" Content="{DynamicResource m_SignOut}" Height="50" FontSize="20"/>
                     </StackPanel>
                 </DockPanel>
                 <DockPanel DockPanel.Dock="Top">
-
+                    <ToolBar Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top"
+                         WindowChrome.IsHitTestVisibleInChrome="True" Style="{DynamicResource EarthToolbar}">
+                        <Menu Opacity="0.8" BorderThickness="0" Background="Transparent">
+                            <MenuItem Width="45" Height="45" Background="Transparent">
+                                <MenuItem.Icon>
+                                    <Image Source="../Resources/earth.png"/>
+                                </MenuItem.Icon>
+                                <MenuItem Header="en-GB" Command="{Binding Select_enGB_Command}"/>
+                                <MenuItem Header="ru-RU" Command="{Binding Select_ruRU_Command}"/>
+                            </MenuItem>
+                        </Menu>
+                    </ToolBar>
                     <StackPanel Width="129" Height="39" Orientation="Horizontal" HorizontalAlignment="Right"
                             VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2"  Grid.Row="0" Margin="4">
                         <Button Style="{DynamicResource MinimizeButton}" Command="{Binding MinimizeCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="39" Width="43"/>
                         <Button Visibility="{Binding MaximizeVisibility}" x:Name="Maximize" Style="{DynamicResource MaximizeButton}" Command="{Binding MaximizeCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="39" Width="43"/>
-                        <Button Visibility="{Binding RestoreVisibility}" x:Name="Resstore" Style="{DynamicResource RestoreButtonStyle}" Command="{Binding RestoreCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="39" Width="43"/>
+                        <Button Visibility="{Binding RestoreVisibility}" x:Name="Restore" Style="{DynamicResource RestoreButtonStyle}" Command="{Binding RestoreCommand}" WindowChrome.IsHitTestVisibleInChrome="True" Height="39" Width="43"/>
                         <Button Style="{DynamicResource CloseButton}" Command="{Binding CloseCommand}" WindowChrome.IsHitTestVisibleInChrome="True"  Height="39" Width="43"/>
                     </StackPanel>
                 </DockPanel>
