--- a/FakeAtlas/App.xaml
+++ b/FakeAtlas/App.xaml
@@ -15,6 +15,10 @@
                 <v:SignUpPage/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type vm:AdminViewModel}">
+                <v:AdminPage/>
+            </DataTemplate>
+
             <DataTemplate DataType="{x:Type vm:BookingUserViewModel}">
                 <v:InfoPage/>
             </DataTemplate>
@@ -32,14 +36,11 @@
             </DataTemplate>
             
             <ResourceDictionary.MergedDictionaries>
-                
-                <ResourceDictionary Source="Localization/lang.ru-RU.xaml" />
 
+                <ResourceDictionary Source="Localization/lang.ru-RU.xaml" />
                 <ResourceDictionary Source="Styles/Colors.xaml" />
-                
                 <ResourceDictionary Source="Styles/Textboxes.xaml" />
                 <ResourceDictionary Source="Styles/Buttons.xaml" />
-                <ResourceDictionary Source="Styles/Texts.xaml" />
                 <ResourceDictionary Source="Styles/Windows.xaml" />
 
             </ResourceDictionary.MergedDictionaries>
