--- a/FakeAtlas/Styles/Buttons.xaml
+++ b/FakeAtlas/Styles/Buttons.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:draw="clr-namespace:System.Drawing;assembly=System.Drawing"
-                    xmlns:color="clr-namespace:FakeAtlas.Styles">
+                    xmlns:color="clr-namespace:FakeAtlas">
     <Style TargetType="{x:Type Button}" x:Key="InputButton">
         <Setter Property="Background" Value="#FF5370C0" />
         <Setter Property="TextBlock.TextAlignment" Value="Center" />
@@ -92,17 +92,20 @@
         </Style.Triggers>
     </Style>
 
-    <Style TargetType="{x:Type Button}" x:Key="LiteralButton">
+    <!---->
+    <Style TargetType="{x:Type RadioButton}" x:Key="LiteralRadioButton">
         <Setter Property="FontFamily" Value="NanumGothic"/>
         <Setter Property="Foreground" Value="#FF020418"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" 
+                <ControlTemplate TargetType="RadioButton">
+                    <Grid x:Name="tiledBtnGrid">
+                        <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" 
                                       Content="{TemplateBinding Content}" 
                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                       Margin="{TemplateBinding Padding}"
                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -114,10 +117,41 @@
                 <Setter Property="Opacity" Value="0.85" />
                 <Setter Property="Margin" Value="1 0 0 0" />
             </Trigger>
-            
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="Foreground" Value="#FF665F5F" />
+                <Setter Property="Opacity" Value="0.85" />
+                <Setter Property="Margin" Value="1 0 0 0" />
+            </Trigger>
         </Style.Triggers>
     </Style>
 
+    <Style TargetType="{x:Type Button}" x:Key="LiteralButton">
+        <Setter Property="FontFamily" Value="NanumGothic"/>
+        <Setter Property="Foreground" Value="#FF020418"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Grid x:Name="tiledBtnGrid">
+                        <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" 
+                                      Content="{TemplateBinding Content}" 
+                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                      Margin="{TemplateBinding Padding}"
+                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="#FF665F5F" />
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Opacity" Value="0.85" />
+                <Setter Property="Margin" Value="1 0 0 0" />
+            </Trigger>
+
+        </Style.Triggers>
+    </Style>
 
     <Style x:Key="CaptionButtonStyle" TargetType="Button">
         <Setter Property="Template">
@@ -139,8 +173,30 @@
         </Setter>
     </Style>
 
+    <Style TargetType="{x:Type Button}" x:Key="RedButtonStyle">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Grid x:Name="LayoutRoot" Background="Transparent" Width="44" Height="30">
+                        <TextBlock x:Name="txt" Text="{TemplateBinding Content}" FontFamily="Segoe MDL2 Assets" FontSize="10" 
+                                   Foreground="#FFF70000" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                   RenderOptions.ClearTypeHint="Auto" TextOptions.TextRenderingMode="Aliased"  TextOptions.TextFormattingMode="Display"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="txt" Property="Foreground" Value="#FF5C1515"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type Button}" x:Key="CloseRedButton" BasedOn="{StaticResource RedButtonStyle}">
+        <Setter Property="Content" Value="&#xE106;"/>
+    </Style>
+    
     <Style TargetType="{x:Type Button}" x:Key="CloseButton" BasedOn="{StaticResource CaptionButtonStyle}">
-        
         <Setter Property="Content" Value="&#xE106;"/>
     </Style>
 
@@ -467,5 +523,132 @@
               Value="{StaticResource VerticalScrollBar}" />
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    
+    <Style x:Key="ToolBarButtonBaseStyle"
+       TargetType="{x:Type ButtonBase}">
+        <Setter Property="SnapsToDevicePixels"
+          Value="true" />
+        <Setter Property="OverridesDefaultStyle"
+          Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ButtonBase}">
+                    
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="{x:Static ToolBar.ToggleButtonStyleKey}"
+       BasedOn="{StaticResource ToolBarButtonBaseStyle}"
+       TargetType="{x:Type ToggleButton}" />
+    <Style x:Key="{x:Static ToolBar.CheckBoxStyleKey}"
+       BasedOn="{StaticResource ToolBarButtonBaseStyle}"
+       TargetType="{x:Type CheckBox}" />
+    <Style x:Key="{x:Static ToolBar.RadioButtonStyleKey}"
+       BasedOn="{StaticResource ToolBarButtonBaseStyle}"
+       TargetType="{x:Type RadioButton}" />
+
+    <Style x:Key="ToolBarOverflowButtonStyle"
+       TargetType="{x:Type ToggleButton}">
+        <Setter Property="OverridesDefaultStyle"
+          Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Border x:Name="Border"
+                CornerRadius="0,3,3,0"
+                SnapsToDevicePixels="true" Background="Black">
+                        <Grid>
+                            
+                            <ContentPresenter />
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="EarthToolbar"
+       TargetType="{x:Type ToolBar}">
+        <Setter Property="SnapsToDevicePixels"
+          Value="true" />
+        <Setter Property="OverridesDefaultStyle"
+          Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToolBar}">
+                    <Border x:Name="Border"
+                CornerRadius="2"
+                BorderThickness="1">
+                        <DockPanel>
+                            <ToggleButton DockPanel.Dock="Right"
+                          IsEnabled="{TemplateBinding HasOverflowItems}"
+                          Style="{DynamicResource ToolBarOverflowButtonStyle}"
+                          ClickMode="Press"
+                          IsChecked="{Binding IsOverflowOpen, Mode=TwoWay, 
+              RelativeSource={RelativeSource TemplatedParent}}">
+                                <ToggleButton.Background>
+                                    <ImageBrush ImageSource="../Resources/earth.png"/>
+                                </ToggleButton.Background>
+                                <Popup x:Name="OverflowPopup"
+                     AllowsTransparency="true"
+                     Placement="Bottom"
+                     StaysOpen="false"
+                     Focusable="false"
+                     PopupAnimation="Slide"
+                     IsOpen="{Binding IsOverflowOpen, 
+                RelativeSource={RelativeSource TemplatedParent}}">
+                                    <Border x:Name="DropDownBorder"
+                        BorderThickness="1">
+                                        <Border.Effect>
+                                            <DropShadowEffect Color="Black" Opacity="0.6" BlurRadius="15" ShadowDepth="0"/>
+                                        </Border.Effect>
+                                        <ToolBarOverflowPanel x:Name="PART_ToolBarOverflowPanel"
+                                        Margin="2"
+                                        WrapWidth="200"
+                                        Focusable="true"
+                                        FocusVisualStyle="{x:Null}"
+                                        KeyboardNavigation.TabNavigation="Cycle"
+                                        KeyboardNavigation.DirectionalNavigation="Cycle" />
+                                    </Border>
+                                </Popup>
+                            </ToggleButton>
+
+                            
+                            <ToolBarPanel x:Name="PART_ToolBarPanel"
+                          IsItemsHost="true"
+                          Margin="0,1,2,2" />
+                        </DockPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsOverflowOpen"
+                   Value="true">
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="{x:Type ToolBarTray}"
+       TargetType="{x:Type ToolBarTray}">
+        <Setter Property="Background">
+            <Setter.Value>
+                <LinearGradientBrush StartPoint="0,0"
+                           EndPoint="1,0">
+                    <LinearGradientBrush.GradientStops>
+                        <GradientStopCollection>
+                            <GradientStop Color="#FFF"
+                          Offset="0.0" />
+                            <GradientStop Color="{DynamicResource WindowColor}"
+                          Offset="1.0" />
+                        </GradientStopCollection>
+                    </LinearGradientBrush.GradientStops>
+                </LinearGradientBrush>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
