--- a/FakeAtlas/Views/HelpPage.xaml
+++ b/FakeAtlas/Views/HelpPage.xaml
@@ -7,7 +7,11 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewmodels:HelpViewModel}">
-    <Grid Background="AliceBlue">
-        <TextBlock>Помощи нет</TextBlock>
+    <Grid Background="Transparent">
+        <StackPanel Orientation="Vertical">
+            <TextBlock Text="{DynamicResource m_OrderUserHelp}"/>
+            <TextBlock Text="{DynamicResource m_OrderSearchHelp}"/>
+            <TextBlock Text="{DynamicResource m_UserOrdersHelp}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
