--- a/FakeAtlas/App.xaml
+++ b/FakeAtlas/App.xaml
@@ -34,15 +34,15 @@
             <DataTemplate DataType="{x:Type vm:HelpViewModel}">
                 <v:HelpPage/>
             </DataTemplate>
-            
-            <ResourceDictionary.MergedDictionaries>
 
+            <ResourceDictionary.MergedDictionaries>
+                
                 <ResourceDictionary Source="Localization/lang.ru-RU.xaml" />
                 <ResourceDictionary Source="Styles/Colors.xaml" />
                 <ResourceDictionary Source="Styles/Textboxes.xaml" />
                 <ResourceDictionary Source="Styles/Buttons.xaml" />
-                <ResourceDictionary Source="Styles/Windows.xaml" />
-
+                <ResourceDictionary Source="Styles/ToolBars.xaml" />
+                
             </ResourceDictionary.MergedDictionaries>
 
         </ResourceDictionary>
